# hw3-clarareckhorn

./: Makefile  README.md  ai_documentation.txt  environment.yml  myst.yml
ligotools/: pyproject.toml
ligotools/ligotools/: __init__.py  utils.py
ligotools/ligotools.egg-info/: PKG-INFO  SOURCES.txt
ligotools/ligotools/tests/: test_readligo.py  test_utils.py
