[build-system]
requires = [
  "setuptools >= 70",
  "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
authors = [
  { name="Ligo Scientific Collaboration (LSC) and Clara Reckhorn", email="clara_reckhorn@berkeley.edu" },
]
description = "python code for reading LOSC data files"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "tqdm",
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["tools"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-clarareckhorn"
Issues = "https://github.com/UCB-stat-159-f25/hw3-clarareckhorn/issues"

[tool.setuptools]
packages = ["ligotools"]

[tool.setuptools.dynamic]
version = {attr = "ligotools.__version__"}